--- a/src/main/components/home.html
+++ b/src/main/components/home.html
@@ -1,6 +1,1 @@
-<div>
-    <d-title title="Mon titre" ></d-title>
-    <d-title title="2eme titre" ></d-title>
-    <d-adder start="0"></d-adder>
-    <d-adder start="10"></d-adder>
-</div>
+<d-chat></d-chat>
