--- a/src/main/components/chat.html
+++ b/src/main/components/chat.html
@@ -1,4 +1,4 @@
-<div>
+<div class="normal-height">
     <div ng-repeat="room in rooms" class="room-menu" ng-class="{active: activeRoom === room}" ng-click="selectRoom(room)">
         <div>{{room.name}}</div>
     </div>
