--- a/src/main/components/room.css
+++ b/src/main/components/room.css
@@ -1,33 +1,33 @@
 .room {
-    font-size: 16px;
+    font-size: 18px;
 }
 .room .users {
-    display: table-cell;
-    width: 25%;
-    vertical-align: top;
     padding: 5px;
     background-color: lightgrey;
     color: white;
 }
 .room .user {
-    float: right;
-    height: 24px;
+    text-align: right;
+    width: 100%;
 }
 .room .messages {
-    width: 75%;
-    display: table-cell;
-    vertical-align: top;
     padding: 5px;
     background-color: lightgreen;
 }
 .room .message {
-    height: 24px;
 }
 .room .message.command {
-    height: 24px;
     color: grey;
     font-style: italic;
 }
 .room input {
     width: 99%;
+    height: 1.5em;
+}
+.room .members {
+    padding: 5px;
+    background-color: lightgrey;
+}
+.room .members > div, .room .users > div, .room .messages > div {
+    height: 24px;
 }
