--- a/src/main/components/room.html
+++ b/src/main/components/room.html
@@ -1,10 +1,19 @@
-<div>
-    <div class="users">
-        <div ng-repeat="message in room.messages.array" class="user">{{message.user ? message.user+' >' : ' '}}</div>
-        <div class="user">{{room.socket.id}} ></div>
+<div class="columns">
+    <div class="small-3">
+        <div class="users">
+            <div ng-repeat="message in room.messages.array" class="user">{{message.user ? message.user+' >' : ' '}}</div>
+            <div class="user">{{room.socket.id}} ></div>
+        </div>
     </div>
-    <div class="messages">
-        <div ng-repeat="message in room.messages.array" class="message" ng-class="{command: !message.user}">{{message.message}}</div>
-        <input type="text" ng-model="text" ng-keydown="onKeydown($event)"/>
+    <div class="small-6">
+        <div class="messages">
+            <div ng-repeat="message in room.messages.array" class="message" ng-class="{command: !message.user}">{{message.message}}</div>
+            <input type="text" ng-model="text" ng-keydown="onKeydown($event)"/>
+        </div>
+    </div>
+    <div class="small-3">
+        <div class="members">
+            <div ng-repeat="member in room.members">{{member}}</div>
+        </div>
     </div>
 </div>
