--- a/src/main/components/room.html
+++ b/src/main/components/room.html
@@ -1,19 +1,28 @@
 <div class="columns">
     <div class="small-3">
         <div class="users">
-            <div ng-repeat="message in room.messages.array" class="user">{{message.user ? message.user+' >' : ' '}}</div>
+            <div ng-repeat="message in room.messages.array"
+                 class="user"
+                 ng-class="{over: userMouseOver === message.user}"
+                 ng-mouseover="onUserMouseOver(message.user)"
+                 ng-mouseout="onUserMouseOut(message.user)"
+                 ng-click="onUserClick(message.user)"
+                    >{{message.user ? message.user+' >' : ' '}}</div>
             <div class="user">{{room.socket.id}} ></div>
         </div>
     </div>
     <div class="small-6">
         <div class="messages">
             <div ng-repeat="message in room.messages.array" class="message" ng-class="{command: !message.user}">{{message.message}}</div>
-            <input type="text" ng-model="text" ng-keydown="onKeydown($event)"/>
+            <input type="text" ng-model="text" ng-keydown="onKeydown($event)" class="text"/>
         </div>
     </div>
     <div class="small-3">
         <div class="members">
-            <div ng-repeat="member in room.members">{{member}}</div>
+            <div ng-repeat="member in room.members"
+                 class="member"
+                 ng-click="onMemberClick(member)"
+                    >{{member}}</div>
         </div>
     </div>
 </div>
